--- a/spec/support/demographic.nl.yml
+++ b/spec/support/demographic.nl.yml
@@ -7,4 +7,7 @@ nl:
         age: Leeftijd
         score: Score
         gender: Geslacht
+        gender/male: Man
+        gender/female: Vrouw
+        gender/unknown: Onbekend
         body_mods: Lichamswijziging
